testsuite/veronac/resolution/compile-fail/invalid-number-of-type-arguments.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class N0 {}
class N1[X] {}
class N2[X, Y] {}

class Main {
  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:6: error: The wrong number of type arguments were specified for 'N0', expected 0, got 1.
  a: N0[U64];

  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N1', expected 1, got 0.
  b1: N1;
  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N1', expected 1, got 0.
  b2: N1[];
  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N1', expected 1, got 2.
  b3: N1[U64, U64];

  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N2', expected 2, got 0.
  c1: N2;
  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N2', expected 2, got 0.
  c2: N2[];
  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N2', expected 2, got 1.
  c3: N2[U64];
  // CHECK-L: invalid-number-of-type-arguments.verona:${LINE:+1}:7: error: The wrong number of type arguments were specified for 'N2', expected 2, got 3.
  c4: N2[U64, U64, U64];

  main() {}
}
